# obsidian-md-bot

./: .env-default  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.gradio/flagged/: dataset1.csv
flagged/: log.csv
pyinit/: cli.py
src/: main.py
